--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.5.4"
   }
 }
